--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore c
   stage: syntax
   image: ruby:2.5.3
   script:
-    - bundle exec rake syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore check:test_file rubocop
+    - bundle exec rake syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore check:test_file
   variables:
     PUPPET_GEM_VERSION: '~> 6'
 
