Override root group on FreeBSD
FreeBSD has no root group, the wheel group is basically the equivalent
for system files.

--- a/data/osfamily/FreeBSD.yaml
+++ b/data/osfamily/FreeBSD.yaml
@@ -1,4 +1,5 @@
 ---
 syslog_ng::config_file: /usr/local/etc/syslog-ng.conf
+syslog_ng::group: wheel
 syslog_ng::package_name: syslog-ng
 syslog_ng::module_prefix: ''
